<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" 
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hop.RegisterActivity" >

        <EditText
            android:id="@+id/register_name"
            android:layout_width="match_parent"
            android:ems="10"
            android:inputType="text"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:background="@drawable/testing_gradient"
            android:paddingLeft="60dp"
            android:layout_height="50dp"
            android:hint="@string/name" />
        
        <EditText
            android:id="@+id/register_phone"
            android:layout_width="match_parent"
            android:ems="10"
            android:inputType="text"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:background="@drawable/testing_gradient"
            android:paddingLeft="60dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:hint="@string/phone" />
        
        <EditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:ems="10"
            android:inputType="text"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:background="@drawable/testing_gradient"
            android:paddingLeft="60dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:hint="@string/email"  />

       
       <EditText
            android:id="@+id/register_username"
            android:layout_width="match_parent"
            android:ems="10"
            android:inputType="text"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:background="@drawable/testing_gradient"
            android:paddingLeft="60dp"
            android:layout_marginTop="8dp"
            android:layout_height="50dp"
            android:hint="@string/username"  />

       

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:ems="10"
            android:inputType="textPassword"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:background="@drawable/testing_gradient"
            android:paddingLeft="60dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:hint="@string/password_label"  />
        
         <TextView
            android:id="@+id/error_messages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:textSize="15dp"
            android:textAppearance="?android:attr/textAppearanceMedium"/>


        <Button
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:onClick="register"
            android:text="@string/sign_up_label" />
        
        <Button
        android:id="@+id/signInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="17sp"
        android:onClick="showLogin"
        android:text="@string/already_have_an_account_label" />
   

    

</LinearLayout>