<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" 
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"  
        android:text="Pick your options ... " 
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="@color/black" />
 
    <com.example.hop.CustomAutoCompleteView
        android:id="@+id/myautocomplete"
        android:layout_width="fill_parent"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:hint="What Service do you provide ?"
        android:background="@drawable/testing_gradient"
        android:paddingLeft="60dp"
        android:layout_height="50dp"
        android:textSize="17dp"
        android:completionThreshold="1" >
    </com.example.hop.CustomAutoCompleteView>
    
     <TextView
        android:id="@+id/startTime"
        android:layout_width="fill_parent"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:hint="@string/starttime"
        android:background="@drawable/testing_gradient"
        android:paddingLeft="60dp"
        android:layout_height="50dp"
        android:textSize="17dp"
        android:clickable ="true"
        android:textColor="@color/black" />
    
    <TextView
        android:id="@+id/endTime"
        android:layout_width="fill_parent"
        android:layout_marginTop="10dp"     
        android:textStyle="bold"          
        android:hint="@string/endtime"
        android:background="@drawable/testing_gradient"
        android:paddingLeft="60dp"
        android:layout_height="50dp"
        android:textSize="17dp" 
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/date"
        android:layout_width="fill_parent"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:hint="@string/date"
        android:background="@drawable/testing_gradient"
        android:paddingLeft="60dp"
        android:layout_height="50dp"
        android:textSize="17dp" 
        android:textColor="@color/black" />
    
    <TextView
        android:id="@+id/location"
        android:layout_width="fill_parent"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:hint="@string/location"
        android:background="@drawable/testing_gradient"
        android:paddingLeft="60dp"
        android:layout_height="50dp"
        android:textSize="17dp" 
        android:textColor="@color/black" />
    
    <Button
            android:id="@+id/Submit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/location"
            android:onClick="navigateToMain"
            android:text="@string/submit" />
    
    <Button
            android:id="@+id/log_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/Submit"
            android:onClick="logOut"
            android:layout_gravity="left"
            android:text="@string/log_out_label" />

</LinearLayout>