<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/drift"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/mover_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:textStyle="bold"
        android:textSize="13dp"
        android:text="@string/mover_name_detail"
        android:textColor="@color/black" />
    
    <TextView
        android:id="@+id/mover_data"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:textStyle="bold"
        android:textSize="13dp"
        android:layout_below="@+id/mover_name"
        android:text="@string/mover_data"
        android:textColor="@color/black" />
    
    <TextView
        android:id="@+id/mover_phone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:textStyle="bold"
        android:textSize="13dp"
        android:layout_below="@+id/mover_data"
        android:text="@string/mover_phone"
        android:textColor="@color/black" />
    
    <TextView
        android:id="@+id/mover_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:textStyle="bold"
        android:textSize="13dp"
        android:layout_below="@+id/mover_phone"
        android:text="@string/mover_email"
        android:textColor="@color/black" />
<!-- 
    <TextView
        android:id="@+id/mover_start_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:layout_below="@+id/mover_data"
        android:text="@string/mover_start_time"
        android:textColor="@color/black" />
    
    <TextView
        android:id="@+id/mover_end_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:layout_below="@+id/mover_start_time"
        android:text="@string/mover_end_time"
        android:textColor="@color/black" />
    
    <TextView
        android:id="@+id/mover_date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:layout_below="@+id/mover_end_time"
        android:text="@string/mover_date"
        android:textColor="@color/black" />
  -->
    <TextView
        android:id="@+id/mover_location"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:textStyle="bold"
        android:textSize="13dp"
        android:layout_below="@+id/mover_email"
        android:text="@string/mover_location"
        android:textColor="@color/black" />

</RelativeLayout>

